--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "4.1.3",
     "@ionic-native/camera": "^4.3.3",
     "@ionic-native/core": "3.12.1",
+    "@ionic-native/file-chooser": "^4.3.3",
     "@ionic-native/file-transfer": "^4.3.3",
     "@ionic-native/network": "^4.2.1",
     "@ionic-native/splash-screen": "3.12.1",
