--- a/package.json
+++ b/package.json
@@ -37,9 +37,11 @@
     "cordova-plugin-splashscreen": "~4.0.1",
     "cordova-plugin-statusbar": "2.2.2",
     "cordova-plugin-whitelist": "1.3.1",
+    "intl": "^1.2.5",
     "ionic-angular": "3.6.1",
     "ionic-gallery-modal": "^0.2.7",
     "ionic-plugin-keyboard": "~2.2.1",
+    "ionic2-calendar": "^0.4.0",
     "ionicons": "3.0.0",
     "rxjs": "5.4.0",
     "sw-toolbox": "3.6.0",
