--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ionic-native/camera": "^4.3.3",
     "@ionic-native/core": "3.12.1",
     "@ionic-native/file-chooser": "^4.3.3",
+    "@ionic-native/file-path": "^4.4.2",
     "@ionic-native/file-transfer": "^4.3.3",
     "@ionic-native/network": "^4.2.1",
     "@ionic-native/splash-screen": "3.12.1",
