separate file-select service created, used that in new and edit planner till now

--- a/package.json
+++ b/package.json
@@ -46,7 +46,9 @@
     "ionicons": "3.0.0",
     "rxjs": "5.4.0",
     "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.12"
+    "zone.js": "0.8.12",
+    "cordova-plugin-file-transfer": "~1.6.3",
+    "cordova-plugin-filechooser": "~1.0.1"
   },
   "devDependencies": {
     "@ionic/app-scripts": "2.1.4",
@@ -65,7 +67,9 @@
       "cordova-plugin-statusbar": {},
       "cordova-plugin-whitelist": {},
       "ionic-plugin-keyboard": {},
-      "cordova-plugin-camera": {}
+      "cordova-plugin-camera": {},
+      "cordova-plugin-file-transfer": {},
+      "cordova-plugin-filechooser": {}
     }
   }
 }
